# FFmpegDemo-2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pf/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/: com_pf_ffmpegdemo_MainActivity.h
app/src/main/java/com/pf/ffmpegdemo/: MainActivity.java
app/src/main/java/com/pf/ffmpegdemo/playnativevideo/: VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pf/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
